basic rest for companies
